--- a/styles.css
+++ b/styles.css
@@ -184,13 +184,9 @@ li{
 }
 
 .formcontainer {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    margin-left: 3%;
-    padding-right: 2.5%;
+    width: 595px;
+    /* padding-left: 20px; */
+    /* padding-right: 20px; */
 }
 
 input, textarea {
@@ -220,11 +216,8 @@ button:hover {
 .previewresume{
     position: sticky;
     top: 10px;
-    padding-right:2.5%;
     height: 842px;
-    flex-shrink: inherit;
     display: flex;
-    flex-direction: column;
     align-items: center;
     margin-bottom: 28%;
 }
@@ -246,4 +239,27 @@ button:hover {
   
   .fa:hover {
     opacity: 0.7;
+  }
+  @media screen and (max-width: 599px) {
+    .container{
+        display: block;
+    }
+    
+    .previewresume{
+        display: block;
+        margin-bottom: 5%;
+    }
+    nav{
+        width: 596px;
+    }
+    .formcontainer {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+  }
+  @media screen and (max-width: 1259px) {
+    .previewresume{
+        padding-right: 0;
+        margin-bottom: 5%;
+    }
   }
